test/corpus/comment.txt
================================================================================
Simple Comment
================================================================================

; a comment

--------------------------------------------------------------------------------

(source
  (comment))

================================================================================
Two semicolons
================================================================================

;; another comment

--------------------------------------------------------------------------------

(source
  (comment))

================================================================================
Multiple lines
================================================================================

;; first line
;; second line

--------------------------------------------------------------------------------

(source
  (comment)
  (comment))

================================================================================
Multi-line Block Comment
================================================================================

#|
a block comment
that spans multiple lines
|#
;; regular comment

--------------------------------------------------------------------------------

(source
  (comment_multiline)
  (comment))

================================================================================
Multi-line Block Comment Content on First Line
================================================================================

#| a block comment
that spans multiple lines
|#

--------------------------------------------------------------------------------

(source
  (comment_multiline))

================================================================================
Multi-line Block Comment Content also on Second Line
================================================================================

#| a block comment
that spans multiple lines|#

--------------------------------------------------------------------------------

(source
  (comment_multiline))
