test/corpus/comment_lit.txt
================================================================================
Simple Comment
================================================================================

; a comment

--------------------------------------------------------------------------------

(source
  (comment))

================================================================================
Two semicolons
================================================================================

;; another comment

--------------------------------------------------------------------------------

(source
  (comment))

================================================================================
Multiple lines
================================================================================

;; first line
;; second line

--------------------------------------------------------------------------------

(source
  (comment)
  (comment))

================================================================================
Multi-line Block Comment
================================================================================

#|
a block comment
that spans multiple lines
|#
;; regular comment

--------------------------------------------------------------------------------

(source
  (block_comment
    (block_comment_content))
  (comment))

================================================================================
Multi-line Block Comment Content on First Line
================================================================================

#| a block comment
that spans multiple lines
|#

--------------------------------------------------------------------------------

(source
  (block_comment
    (block_comment_content)))

================================================================================
Multi-line Block Comment Content also on Second Line
================================================================================

#| a block comment
that spans multiple lines|#

--------------------------------------------------------------------------------

(source
  (block_comment
    (block_comment_content)))
