test/corpus/none_lit.txt
================================================================================
None
================================================================================

none

--------------------------------------------------------------------------------

(source
  (null_lit))

================================================================================
None in List
================================================================================

(none)

--------------------------------------------------------------------------------

(source
  (list_lit
    (null_lit)))
