test/corpus/sym_lit.txt
================================================================================
Simple Symbol
================================================================================

def

--------------------------------------------------------------------------------

(source
  (sym_lit (sym_name)))

================================================================================
Division Symbol
================================================================================

/

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_name)))

================================================================================
Division Symbol followed by delimiter
================================================================================

(+ - * /)

--------------------------------------------------------------------------------

(source
  (list_lit
    (sym_lit (sym_name))
    (sym_lit (sym_name))
    (sym_lit (sym_name))
    (sym_lit (sym_name))))

================================================================================
Symbol that starts with #
================================================================================

#if

--------------------------------------------------------------------------------

(source
  (sym_lit (sym_name)))

================================================================================
Symbol that contains a number
================================================================================

4x3

--------------------------------------------------------------------------------

(source
  (sym_lit (sym_name)))

================================================================================
Symbol that contains a number, multiple digits
================================================================================

16x9

--------------------------------------------------------------------------------

(source
  (sym_lit (sym_name)))

================================================================================
Symbol that contains a number, followed by non-numbers
================================================================================

2-times

--------------------------------------------------------------------------------

(source
  (sym_lit (sym_name)))
