test/corpus/unquote_splicing_lit.txt
================================================================================
Unquote Splicing into List
================================================================================

`(+ ,@(list 2 3))

--------------------------------------------------------------------------------

(source
  (quasi_quoting_lit
    (list_lit
      (sym_lit (sym_name))
      (unquote_splicing_lit
        (list_lit
          (sym_lit (sym_name))
          (num_lit)
          (num_lit))))))
