test/corpus/unquoting_lit.txt
================================================================================
Unquoting Symbol
================================================================================

`,a

--------------------------------------------------------------------------------

(source
  (quasi_quoting_lit
    (unquoting_lit
      (sym_lit (sym_name)))))

================================================================================
Unquoting List
================================================================================

`(dec ,(+ 1 a))

--------------------------------------------------------------------------------

(source
  (quasi_quoting_lit
    (list_lit
      (sym_lit (sym_name))
      (unquoting_lit
        (list_lit
          (sym_lit (sym_name))
          (num_lit)
          (sym_lit (sym_name)))))))
